update cards coefficient
