# internal/api/server/restapi/api/update_user_card_parameters.go
@@ -1,0 +1,115 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package api
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+
+	models "github.com/pskoob/miniappBack/internal/api/definition"
+)
+
+// NewUpdateUserCardParams creates a new UpdateUserCardParams object
+//
+// There are no default values defined in the spec.
+func NewUpdateUserCardParams() UpdateUserCardParams {
+
+	return UpdateUserCardParams{}
+}
+
+// UpdateUserCardParams contains all the bound params for the update user card operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters UpdateUserCard
+type UpdateUserCardParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*Card Update Body
+	  Required: true
+	  In: body
+	*/
+	CardUpdateBody *models.CardUpdateBody
+	/*The tg ID of user
+	  Required: true
+	  In: path
+	*/
+	TgID int64
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewUpdateUserCardParams() beforehand.
+func (o *UpdateUserCardParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body models.CardUpdateBody
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("cardUpdateBody", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("cardUpdateBody", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			ctx := validate.WithOperationRequest(r.Context())
+			if err := body.ContextValidate(ctx, route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.CardUpdateBody = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("cardUpdateBody", "body", ""))
+	}
+
+	rTgID, rhkTgID, _ := route.Params.GetOK("tg_id")
+	if err := o.bindTgID(rTgID, rhkTgID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindTgID binds and validates parameter TgID from path.
+func (o *UpdateUserCardParams) bindTgID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	value, err := swag.ConvertInt64(raw)
+	if err != nil {
+		return errors.InvalidType("tg_id", "path", "int64", raw)
+	}
+	o.TgID = value
+
+	return nil
+}
